# sbv2_api_caller

./: README.md  config.yaml  pyproject.toml  sbv2_api_caller.py  speech_script.txt  wav_seq_player.py
